Changes for 3.0.5rc1

New features:
...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)

Bug fixes:
..F....... [ZBX-11057] fixed drawing lines of items with scheduled interval when graph data is selected from trends (Cemeris)
..F....... [ZBX-8801] made "Trigger status" be always remembered in "Monitoring" -> "Triggers" and "Monitoring" -> "Overview", even if "All" (asaveljevs)
..F....... [ZBX-10974] fixed filter being reset when moving to a different page in "Monitoring" -> "Triggers" (asaveljevs)
A......... [ZBX-11020] fixed "host.create" so that both "inventory" and "inventory_mode" are optional (asaveljevs)
.......PS. [ZBX-8489] removed ODBC request answer size limitation (viktors, wiper)
........S. [ZBX-10830] fixed SNMP trap to convert non-printable values from SNMPv3 to hexadecimal (viktors, zalex_ua)
..F....... [ZBX-11071] fixed closing success and error messages in IE (Cemeris)
........S. [ZBX-11124] fixed memory leak in process of deleting hosts, which occurs during lld processing (Sergejs)
.......P.. [ZBX-11109] fixed processing of parameter HousekeepingFrequency=0 in proxy (Sergejs)
........S. [ZBX-11099] reduced configuration cache lock time after host maintenance ends (wiper)
........S. [ZBX-9413] fixed disabled hosts linking to a maintenance (Sergejs)
...G...PS. [ZBX-11100] fixed minor bugs and use of magic numbers in IP range parsers (Sergejs)
........S. [ZBX-11072] fixed problem with string truncation for IBM DB2 databases which contain the char '\r' (Sergejs)
....I..... [ZBX-11081] fixed compilation error with curl library (Sergejs)
..F....... [ZBX-10901] added missing highlighting for some UI elements in focused state (asaveljevs, Pavel)
..F....... [ZBXNEXT-3351] decreased padding in screens to make them more compact (asaveljevs, Pavel)
........S. [ZBX-11059] fixed duplicate notifications sending from one media type (Sergejs)